Update file verification program

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: a28c6a14a16139cdac5fd8b4f9d4c82b76c540c4
+Commit Hash: 9892f841b2dc26042ff3c08466fcea453fc2e0ff
+Author: Niwatori401
+Date: Sun Mar 12 02:49:17 2023
+
+Update file verification program
+
+==================================================
+Commit Hash: a86b0306600e302f1048b52448fe7dc8a26517db
 Author: Niwatori401
 Date: Sun Mar 12 01:14:11 2023
 
