--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,19 @@
 ==================================================
-Commit Hash: 9892f841b2dc26042ff3c08466fcea453fc2e0ff
+Commit Hash: 065c1dc00ab20537c5da1ad89a18bec42fed84ce
+Author: Niwatori401
+Date: Sun Mar 12 03:43:14 2023
+
+Update verification scripts
+
+==================================================
+Commit Hash: 44cb193c21f571848cfd02a545b8dabb95024562
+Author: Niwatori401
+Date: Sun Mar 12 02:53:08 2023
+
+Merge with dev
+
+==================================================
+Commit Hash: c03191aa3cd64aa139e7a93a918a5092255e011b
 Author: Niwatori401
 Date: Sun Mar 12 02:49:17 2023
 
@@ -7,6 +21,13 @@ Update file verification program
 
 ==================================================
 Commit Hash: a86b0306600e302f1048b52448fe7dc8a26517db
+Author: Niwatori401
+Date: Sun Mar 12 01:14:11 2023
+
+Fix error which caused corpses to appear as broken textures on load
+
+==================================================
+Commit Hash: a28c6a14a16139cdac5fd8b4f9d4c82b76c540c4
 Author: Niwatori401
 Date: Sun Mar 12 01:14:11 2023
 
