Update verification program

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: 065c1dc00ab20537c5da1ad89a18bec42fed84ce
+Commit Hash: cf5a70663b8f29b465b49c15a6c6d788282185c1
+Author: Niwatori401
+Date: Sun Mar 12 04:23:15 2023
+
+Update verification program
+
+==================================================
+Commit Hash: 829636084cdbbe3a930ebe51c2cfa2847553d56e
 Author: Niwatori401
 Date: Sun Mar 12 03:43:14 2023
 
