--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: cf5a70663b8f29b465b49c15a6c6d788282185c1
+Commit Hash: 4bf9bf056fda1c030576e1249536025810d25a7e
+Author: Niwatori401
+Date: Sun Mar 12 07:27:12 2023
+
+Invalidate caches on load, fixing issues where buttons would not work
+
+==================================================
+Commit Hash: 59c0a0e89bee95b5f5b1893f463ae82b7a8394e6
 Author: Niwatori401
 Date: Sun Mar 12 04:23:15 2023
 
