Fix Anty race support Add tool to convert build versions to times

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,13 @@
 ==================================================
-Commit Hash: 4bf9bf056fda1c030576e1249536025810d25a7e
+Commit Hash: 22ae1734669b3c2963f5f3f1d7acd3f389ff5c42
+Author: Niwatori401
+Date: Sun Mar 12 10:34:39 2023
+
+Fix Anty race support
+Add tool to convert build versions to times
+
+==================================================
+Commit Hash: 29de4ae90d23db2ca5dfda2fd9a0b465d58c0e1f
 Author: Niwatori401
 Date: Sun Mar 12 07:27:12 2023
 
