Update generateCommonality for enbiggener

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: a207bb52cc1fa2fb955f820880e73243f93edef3
+Commit Hash: c0cdfa4e8b158142934ec6e5eca5b67ed6e120fe
+Author: Niwatori401
+Date: Tue Mar 21 01:10:34 2023
+
+Update generateCommonality for enbiggener
+
+==================================================
+Commit Hash: 97466e1372ed65bc4732965a9c3ebec5bb931786
 Author: Niwatori401
 Date: Tue Mar 21 00:38:46 2023
 
