Fix UltraTech bench not being usable Increase work amount for making gluttonium meals beyond trivial value

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,13 @@
 ==================================================
-Commit Hash: c0cdfa4e8b158142934ec6e5eca5b67ed6e120fe
+Commit Hash: af643a64b4eaf342d45f3a64274729fdb0a647f7
+Author: Niwatori401
+Date: Wed Mar 22 06:55:59 2023
+
+Fix UltraTech bench not being usable
+Increase work amount for making gluttonium meals beyond trivial value
+
+==================================================
+Commit Hash: 2a3643af2536415bea5bc467be7c0ce05a5f6d3f
 Author: Niwatori401
 Date: Tue Mar 21 01:10:34 2023
 
