Add weight tracking in history tab for pawns

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: af643a64b4eaf342d45f3a64274729fdb0a647f7
+Commit Hash: ee348b398d77246edab29ec8d57ef23802f9fd4c
+Author: Niwatori401
+Date: Mon Mar 27 08:01:35 2023
+
+Add weight tracking in history tab for pawns
+
+==================================================
+Commit Hash: 2adbe24a47bbdd6f7e00e17fd9b1d87577933503
 Author: Niwatori401
 Date: Wed Mar 22 06:55:59 2023
 
