--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,13 @@
 ==================================================
-Commit Hash: 90ebf7201156b3ae0ebb037f21a9a927d007af35
+Commit Hash: d4b5d23f734e5bf296c78aec3866811033bb2849
+Author: Niwatori401
+Date: Thu Apr 6 03:55:59 2023
+
+Colonists in blob beds no longer will get thoughts for 'slept on ground' or 'slept outside'
+Refactor blob bed checking to new utility class
+
+==================================================
+Commit Hash: 4de1e6c748b718d11f86a23dbd69889ebcc39160
 Author: Niwatori401
 Date: Mon Mar 27 08:07:18 2023
 
