Fix caravans eating all food instantly

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: 975e311c41214efd9241bb3815629eeede6118a5
+Commit Hash: f8b1fc810001267a65e9fdf2f3d7d7230a4b6b31
+Author: Niwatori401
+Date: Sun Apr 9 02:08:06 2023
+
+Fix caravans eating all food instantly
+
+==================================================
+Commit Hash: d2142271c7c7436bbb422bf86c5a7c7660d29f1b
 Author: Niwatori401
 Date: Sat Mar 18 00:00:43 2023
 
