--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: af01734af45dabae864c1c7f2cac619784f7881b
+Commit Hash: 9f3a94f2e3fefb751addbe1359b9801a715d22fd
+Author: Niwatori401
+Date: Fri May 5 06:40:42 2023
+
+Add Obese sprite shirt textures for apple body type
+
+==================================================
+Commit Hash: f8c5609e406e1f6c5fc8617503205d4c19767947
 Author: Niwatori401
 Date: Thu May 4 11:31:21 2023
 
