--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: 9f3a94f2e3fefb751addbe1359b9801a715d22fd
+Commit Hash: 1116c4d02fdf9808b69904a2e68659fa21f0a6e7
+Author: Niwatori401
+Date: Sat May 6 02:58:58 2023
+
+Add try/catch around main Harmony patch to allow better error detection
+
+==================================================
+Commit Hash: e7b6999e4c5dff1ac0e554fdaec375b642f60c59
 Author: Niwatori401
 Date: Fri May 5 06:40:42 2023
 
