Fix error introduced by previous patch

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: bf90cb160d89b0f21a02f23b076100ffb166bfd1
+Commit Hash: 5a6b7dc5c7379edfdae2c89d7437ae622879b189
+Author: Niwatori401
+Date: Sun Apr 14 02:27:56 2024
+
+Fix error introduced by previous patch
+
+==================================================
+Commit Hash: 9f0b07eac3e588656ab3da5f0135a8504703a623
 Author: Niwatori401
 Date: Sun Apr 14 01:30:33 2024
 
